# VT-Studio

./: .gitignore  .npmrc  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: canvas_edit.rs  character.rs  config.rs  diagnostic.rs  dictionary.rs  digital_human.rs  export.rs  ffmpeg.rs  image_slideshow.rs  local_memory.rs  location.rs  long_content.rs  material_edit.rs  media.rs  mod.rs  novel.rs  project.rs  prompt.rs  provider.rs  scene.rs  style.rs  task.rs  template.rs  video_pack.rs
src-tauri/src/core/: app_state.rs  error.rs  event.rs  mod.rs  result.rs
src-tauri/src/db/: asset_repository.rs  character_repository.rs  config_repository.rs  export_repository.rs  local_memory_repository.rs  location_repository.rs  long_content_repository.rs  material_edit_repository.rs  mod.rs  novel_repository.rs  project_repository.rs  provider_repository.rs  scene_repository.rs  style_repository.rs  task_repository.rs  video_pack_repository.rs
src-tauri/src/domain/: canvas_edit.rs  character.rs  config.rs  diagnostic.rs  dictionary.rs  digital_human.rs  export.rs  image_slideshow.rs  local_memory.rs  location.rs  long_content.rs  material_edit.rs  media.rs  mod.rs  novel.rs  project.rs  prompt.rs  provider.rs  scene.rs  structured_output.rs  style.rs  task.rs  template.rs  video_pack.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/security/: mod.rs  secret_guard.rs
(+570 files in other folders)
